--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container menu-bar">
             <div class="row">
                 <div class="col-5 col-md-2 order-md-1">
-                    <a href="" class="site-logo"><img src="./assets/logo_top.png" alt=""></a>
+                    <a href="" class="site-logo"><img src="./assets/logo_top.png" class="img-fluid" alt=""></a>
                 </div>
                 <div class="col-5 col-md-2 order-md-3 flx-content-right">
                     <a class="button" href="contact.html">Đặt dịch vụ</a>
